Add form to delete archive records and webserver API endpoint
- Add cache busters

- Add visual divider for non-related buttons on `orders` page

- Implement and use core.DeleteArchivedRecordsWithBackup for webserver API

- Remove duplicate fileExits helper function

--- a/client/webserver/site/src/css/forms.scss
+++ b/client/webserver/site/src/css/forms.scss
@@ -314,7 +314,8 @@ button.form-button {
 #changeAppPWForm,
 #dexAddrForm,
 #verifyForm,
-#appPWForm {
+#appPWForm,
+#deleteArchivedRecordsForm {
   width: 325px;
 }
 
