--- a/client/webserver/site/src/css/main.scss
+++ b/client/webserver/site/src/css/main.scss
@@ -78,6 +78,7 @@ header.maintop {
   align-items: center;
   z-index: 100;
   border-bottom: 1px solid $light_border_color;
+  background-color: $light_body_bg;
 }
 
 a.logo-icon {
