--- a/client/webserver/site/src/html/orders.tmpl
+++ b/client/webserver/site/src/html/orders.tmpl
@@ -35,8 +35,13 @@
         {{end}}
         <div class="apply-bttn d-hide"><button class="bg2 demi">[[[apply]]]</button></div>
       </div>
-      <div id="exportOrders" class="export-bttn">
+      <div id="exportOrders" class="export-archived-records-bttn mt-3">
         <button class="bg2 demi">[[[Export Trades]]]</button>
+      </div>
+      <hr class="dashed mt-2 mb-2">
+      <div class="demi fs16 text-center py-1 px-4">[[[other_actions]]]</div>
+      <div id="deleteArchivedRecords" class="export-archived-records-bttn">
+        <button class="bg2 demi">[[[delete_archived_records]]]</button>
       </div>
     </div>
     <div class="flex-grow-1">
@@ -79,6 +84,43 @@
       <div id="orderLoader" class="text-center mt-2 mb-5 d-hide"><div class="ico-spinner spinner"></div></div>
       <div class="py-5"></div>
     </div>
+  </div>
+
+  {{- /* POP UP FORMS */ -}}
+  <div id="forms" class="d-hide">
+    {{- /* DELETE ARCHIVED RECORDS FORM */ -}}
+    <form class="d-hide" id="deleteArchivedRecordsForm"><div class="form-closer hoverbg"><span class="ico-cross"></span></div>
+      <div class="py-1 text-center position-relative fs22 sans-light">
+       [[[delete_archived_records]]]
+      </div>
+      <div class="mt-3">
+       <label for="olderThan" class="form-label ps-1 mb-1" data-tooltip="[[[archived_date_time_tooltip]]]">
+        [[[date_time]]]
+        <span class="ico-info"></span>
+       </label>
+       <div class="d-flex">
+        <input type="datetime-local" class="form-control col-1 select" id="olderThan">
+       </div>
+      </div>
+      <div class="mt-2 p-0">
+        <input id="saveOrdersToFile" class="form-check-input" type="checkbox">
+        <label class="form-check-label ps-1 mb-1" for="saveOrdersToFile" data-tooltip="[[[save_orders_to_file_msg]]]">
+        [[[save_orders_to_file]]]
+        <span class="ico-info"></span>
+        </label>
+      </div>
+      <div class="mt-2 p-0">
+        <input id="saveMatchesToFile" class="form-check-input" type="checkbox">
+        <label class="form-check-label ps-1 mb-1" for="saveMatchesToFile" data-tooltip="[[[save_matches_to_file_msg]]]">
+         [[[save_matches_to_file]]]
+        <span class="ico-info"></span>
+        </label>
+      </div>
+      <div class="d-flex justify-content-end mt-4">
+        <button id="deleteArchivedRecordsSubmit" type="button" class="justify-content-center fs15 bg2 selected">[[[Submit]]]</button>
+      </div>
+      <div id="deleteArchivedRecordsErr" class="fs15 pt-3 text-center d-hide errcolor text-break"></div>
+    </form>
   </div>
 
 </div>
