--- a/client/webserver/site/src/html/bodybuilder.tmpl
+++ b/client/webserver/site/src/html/bodybuilder.tmpl
@@ -86,10 +86,12 @@
       <span class="ico-settings fs16 me-2"></span>
       [[[Order History]]]
     </a>
+    {{if .Experimental}}
     <a href="/mm" class="demi hoverbright plainlink d-flex align-items-center py-1 authed-only">
       <span class="ico-barchart fs16 me-2"></span>
       [[[Market Making]]]
     </a>
+    {{end}}
     <a href="/settings" class="demi hoverbright plainlink d-flex align-items-center py-1">
       <span class="ico-settings fs16 me-2"></span>
       [[[Settings]]]
