--- a/client/webserver/site/src/html/orders.tmpl
+++ b/client/webserver/site/src/html/orders.tmpl
@@ -93,13 +93,20 @@
       <div class="py-1 text-center position-relative fs22 sans-light">
        [[[delete_archived_records]]]
       </div>
-      <div class="mt-3">
-       <label for="olderThan" class="form-label ps-1 mb-1" data-tooltip="[[[archived_date_time_tooltip]]]">
-        [[[date_time]]]
+      <div class="mt-2 p-0">
+        <input id="showArchivedDateField" class="form-check-input" type="checkbox">
+        <label class="form-check-label ps-1 mb-1" for="showArchivedDateField" data-tooltip="[[[delete_all_archived_records]]]">
+         [[[show_archived_date_msg]]]
         <span class="ico-info"></span>
-       </label>
-       <div class="d-flex">
-        <input type="datetime-local" class="form-control col-1 select" id="olderThan">
+        </label>
+        <div id="archivedDateField" class="mt-3">
+         <label for="olderThan" class="form-label ps-1 mb-1" data-tooltip="[[[archived_date_tooltip]]]">
+          [[[date_time]]]
+          <span class="ico-info"></span>
+        </label>
+        <div class="d-flex">
+         <input type="datetime-local" class="form-control col-1 select" id="olderThan">
+        </div>
        </div>
       </div>
       <div class="mt-2 p-0">
