return and display deleted archived records result

--- a/client/webserver/site/src/html/orders.tmpl
+++ b/client/webserver/site/src/html/orders.tmpl
@@ -123,6 +123,11 @@
         <span class="ico-info"></span>
         </label>
       </div>
+      <div id="deleteArchivedResult">
+        <hr class="dashed mt-2 mb-2">
+        <div id="deleteArchivedRecordsMsg" class="fs15 d-hide text-break"></div>
+        <div id="archivedRecordsLocation" class="fs15 d-hide text-break"></div>
+      </div>
       <div class="d-flex justify-content-end mt-4">
         <button id="deleteArchivedRecordsSubmit" type="button" class="justify-content-center fs15 bg2 selected">[[[Submit]]]</button>
       </div>
