--- a/client/webserver/site/src/html/markets.tmpl
+++ b/client/webserver/site/src/html/markets.tmpl
@@ -582,9 +582,10 @@
             </span>
           </div>
 
-          <div id="vOrderOpts">
+          <div id="vDefaultOrderOpts">
             {{template "orderOptionTemplates"}}
           </div>
+          <div id="vOtherOrderOpts" class="d-hide"></div>
         </div> {{- /* END id="vPreorder" */ -}}
 
         <div id="vUnlockPreorder">
