Dark table only in dark mode

--- a/client/webserver/site/src/css/wallets.scss
+++ b/client/webserver/site/src/css/wallets.scss
@@ -182,6 +182,12 @@
   .peers-table-icon {
     padding-left: 30%;
   }
+
+  .peers-table {
+    @extend .table;
+    @extend .table-striped;
+    @extend .w-50;
+  }
 }
 
 @include media-breakpoint-up(xxl) {
