--- a/client/webserver/site/src/css/wallets_dark.scss
+++ b/client/webserver/site/src/css/wallets_dark.scss
@@ -8,5 +8,9 @@ body.dark {
     #walletDetailsBox {
       border-bottom: $dark_border_color;
     }
+
+    .peers-table {
+      @extend .table-dark;
+    }
   }
 }
