--- a/client/webserver/site/src/html/wallets.tmpl
+++ b/client/webserver/site/src/html/wallets.tmpl
@@ -420,7 +420,7 @@
       <div class="px-2 py-1 text-center position-relative fs22 sans-light">
         [[[manage_peers]]]
       </div>
-      <table id="peersTable" class="table table-striped table-dark w-50">
+      <table id="peersTable" class="peers-table">
         <thead>
           <tr>
             <th class="text-nowrap">[[[address]]]</th>
