--- a/client/webserver/site/src/html/markets.tmpl
+++ b/client/webserver/site/src/html/markets.tmpl
@@ -572,11 +572,20 @@
 
           <hr class="dashed mb-2 mt-3">
 
-          <div class="grey fs18 text-start">[[[Options]]]</div>
+          <div class="grey fs18 d-flex justify-content-between align-items-center">
+            [[[Options]]]
+            <span class="grey fs14 underline pointer hoverbg" id="showAdvancedOptions">
+              [[[show advanced options]]]
+            </span>
+            <span class="grey fs14 underline pointer hoverbg d-hide" id="hideAdvancedOptions">
+              [[[hide advanced options]]]
+            </span>
+          </div>
 
-          <div id="vOrderOpts">
+          <div id="vDefaultOrderOpts">
             {{template "orderOptionTemplates"}}
           </div>
+          <div id="vOtherOrderOpts" class="d-hide"></div>
         </div> {{- /* END id="vPreorder" */ -}}
 
         <div id="vUnlockPreorder">
