core,btc,app: Manage SPV wallet peers
This change allows the user to see the peers the BTC SPV wallets are
connected to, and add new peers.
- `client/asset`: Adds a new `PeerManager` interface with three methods:
  `Peers`, `AddPeer` and `RemovePeer`. Wallets that implement this
  interface have the trait `WalletTraitPeerManager`.
- `client/core`: Adds new methods that call the `PeerManager` methods.
- `client/btc`:
  - A `SPVPeerManager` type is added which manages a peers.json and
    a neutrino chain service. When the user adds a new peer, it is stored
    in the key value db, and will be automatically connected the next
    time the wallet is opened.
  - The `BTCWallet` interface now has three new functions,  `Peers`,
    `AddPeer` and `RemovePeer`, and the BTC, BCH, and LTC SPV wallets
    each use a `SPVPeerManager` in order to handle these new functions.

--- a/client/webserver/site/src/css/wallets.scss
+++ b/client/webserver/site/src/css/wallets.scss
@@ -178,6 +178,16 @@
   #walletDetailsBox {
     border-bottom: $light_border_color;
   }
+
+  .peers-table-icon {
+    padding-left: 30%;
+  }
+
+  .peers-table {
+    @extend .table;
+    @extend .table-striped;
+    @extend .w-50;
+  }
 }
 
 @include media-breakpoint-up(xxl) {
