--- a/client/webserver/site/src/css/market_dark.scss
+++ b/client/webserver/site/src/css/market_dark.scss
@@ -145,7 +145,7 @@ body.dark {
       }
     }
 
-    #leftColumnV1 {
+    #leftMarketDock {
       border-color: $dark_border_color;
       background-color: $dark_body_bg;
 
