Fix typo after moving HTML around

--- a/client/webserver/site/src/css/forms.scss
+++ b/client/webserver/site/src/css/forms.scss
@@ -313,7 +313,7 @@ button.form-button {
 
 #changeAppPWForm,
 #dexAddrForm,
-#verifyForm,
+#verifyOrderView,
 #appPWForm,
 #deleteArchivedRecordsForm {
   width: 325px;
