--- a/client/webserver/site/src/css/market.scss
+++ b/client/webserver/site/src/css/market.scss
@@ -477,7 +477,7 @@ div[data-handler=markets] {
     }
   }
 
-  #verifyForm {
+  #verifyOrderView {
     .echo-data span {
       margin: 0 5px;
     }
@@ -568,7 +568,7 @@ div[data-handler=markets] {
       }
     }
 
-    #vUnlockPreorder {
+    #vUnlockPreorderForm {
       .ico-locked {
         font-size: 35px;
       }
@@ -700,7 +700,7 @@ div[data-handler=markets] {
     display: none;
   }
 
-  #vUnlockPreorder {
+  #vUnlockPreorderForm {
     .ico-locked {
       font-size: 35px;
     }
