--- a/client/webserver/site/src/css/market_dark.scss
+++ b/client/webserver/site/src/css/market_dark.scss
@@ -123,7 +123,7 @@ body.dark {
       }
     }
 
-    #verifyForm {
+    #verifyOrderView {
       .header {
         &.buygreen-bg {
           background-color: #29bb7799;
