--- a/client/webserver/site/src/html/mm.tmpl
+++ b/client/webserver/site/src/html/mm.tmpl
@@ -270,7 +270,7 @@
       <div class="form-closer hoverbg"><span class="ico-cross"></span></div>
       <div>
         <label for="pwInput" class="form-label pt-3 ps-1 mb-1">[[[App Password]]]</label>
-        <input type="password" class="form-control select" id="pwInput" autocomplete="off">
+        <input type="password" class="form-control select" id="pwInput" autocomplete="current-password">
       </div>
       <div class="text-end  mt-3">
         <button id="pwSubmit" class="selected fs16">[[[Submit]]]</button>
