--- a/client/webserver/site/src/html/wallets.tmpl
+++ b/client/webserver/site/src/html/wallets.tmpl
@@ -323,7 +323,7 @@
        <div class="fs16 px-4 text-center">[[[Authorize the transfer with your app password.]]]</div>
         <div class="input-group mt-2">
           <label for="vSendPw" class="form-label m-2">[[[Password]]]: </label>
-          <input type="password" class="form-control select" id="vSendPw" autocomplete="off">
+          <input type="password" class="form-control select" id="vSendPw" autocomplete="current-password">
         </div>
       <div class="d-flex justify-content-between align-items-stretch flex-wrap mt-3">
         <div class="col-12 p-0">
@@ -388,7 +388,7 @@
       <div class="d-flex mt-1 {{if $passwordIsCached}}justify-content-end{{end}}">
         <div class="col-12 p-0 {{if $passwordIsCached}}d-hide{{end}}">
           <label for="appPW" class="form-label ps-1 mb-1">[[[App Password]]]</label>
-          <input type="password" class="form-control select" id="appPW" autocomplete="off">
+          <input type="password" class="form-control select" id="appPW" autocomplete="current-password">
         </div>
         <div class="col-12 p-0 text-end">
           <div>&nbsp;</div>
