--- a/client/webserver/site/src/html/register.tmpl
+++ b/client/webserver/site/src/html/register.tmpl
@@ -14,7 +14,7 @@
       </div>
       <div class="pb-3">
         <label for="appPWAgain" class="form-label ps-1 mb-1">[[[Password Again]]]</label>
-        <input type="password" class="form-control select" id="appPWAgain" autocomplete="off">
+        <input type="password" class="form-control select" id="appPWAgain" autocomplete="current-password">
       </div>
       <div>
         <input class="form-check-input" type="checkbox" id="rememberPass">
