--- a/client/webserver/site/src/html/forms.tmpl
+++ b/client/webserver/site/src/html/forms.tmpl
@@ -67,11 +67,11 @@
       <label for="newWalletPass" class="form-label pt-3 ps-1 mb-1">[[[Wallet Password]]]
         <span class="ico-info" data-tooltip="[[[w_password_tooltip]]]"></span>
       </label>
-      <input type="password" class="form-control select" data-tmpl="newWalletPass" autocomplete="current-password">
+      <input type="password" class="form-control select" data-tmpl="newWalletPass" autocomplete="new-password">
     </div>
     <div class="hide-pw col-11 p-0">
       <label for="nwAppPass" class="form-label pt-3 ps-1 mb-1">[[[App Password]]]</label>
-      <input type="password" class="form-control select" id="nwAppPass" data-tmpl="appPass" autocomplete="current-password">
+      <input type="password" class="form-control select" id="nwAppPass" data-tmpl="appPass" autocomplete="new-password">
     </div>
     <span class="col-3 hide-pw"></span> {{/* flex dummy */}}
     <div class="d-grid align-items-end col-10 p-0 mt-4">
