--- a/client/webserver/site/src/html/forms.tmpl
+++ b/client/webserver/site/src/html/forms.tmpl
@@ -140,8 +140,16 @@
 {{define "dexAddrForm"}}
 <div class="form-closer hoverbg"><span class="ico-cross"></span></div>
 <div data-tmpl="addDexHdr" class="flex-center fs24 sans-light"><span class="ico-plus fs12 me-2"></span> [[[Add a DEX]]]</div>
+<div class="pt-2 fs14">
+  <hr class="dashed my-2">
+  <input class="form-check-input" type="checkbox" data-tmpl="skipRegistration" id="skipRegistration">
+  <label for="skipRegistration" class="ps-1">[[[Skip Registration]]]</label>
+</div>
 <div data-tmpl="updateDexHdr" class="flex-center fs24 sans-light d-hide"></span> [[[update dex host]]]</div>
-<div class="fs20 sans-light" data-tmpl="pickServerMsg">[[[Pick a server]]]</div>
+<div class="fs20 sans-light" data-tmpl="pickServerMsg">
+  <hr class="dashed my-2">
+  [[[Pick a server]]]
+</div>
 <div class="d-flex flex-column align-items-stretch mt-1" data-tmpl="knownXCs">
   {{range .KnownExchanges}}
     <div class="known-exchange" data-host="{{.}}"><img class="micro-icon me-1" src={{dummyExchangeLogo .}}> {{.}}</div>
