--- a/client/webserver/site/src/html/markets.tmpl
+++ b/client/webserver/site/src/html/markets.tmpl
@@ -324,6 +324,17 @@
                 <div class="fs15 pt-3 text-center d-hide errcolor text-break" id="orderErr"></div>
               </form>
 
+              {{- /* CREATE ACCOUNT TO TRADE */ -}}
+              <div id="notRegistered" class="d-hide">
+                <div class="p-3 flex-center fs16 grey">
+                  Create an account to trade
+                </div>
+                <div class="brdrtop brdrbottom flex-center p-2">
+                  <p class="text-center fs14 sans-light p-2 m-0">[[[need_to_register_msg]]]</p>
+                  <button data-tmpl="registerBttn" type="button" class="pointer hoverbg text-center p-2 text-nowrap">[[[Create Account]]]</button>
+                </div>
+              </div>
+
               {{- /* BALANCES */ -}}
               <div id="noWallet" class="p-3 flex-center fs16 grey d-hide">
                 Create wallets to trade
