perform acct discovery before registering view-only dex

--- a/client/webserver/site/src/css/forms.scss
+++ b/client/webserver/site/src/css/forms.scss
@@ -311,7 +311,8 @@ button.form-button {
 #unlockWalletForm,
 #authorizeAccountExportForm,
 #authorizeAccountImportForm,
-#disableAccountForm {
+#disableAccountForm,
+#discoverAcctForm {
   width: 275px;
 }
 
