--- a/client/webserver/site/src/html/register.tmpl
+++ b/client/webserver/site/src/html/register.tmpl
@@ -1,6 +1,6 @@
 {{define "register"}}
 {{template "top" .}}
-<div id="main" data-handler="register" data-host="{{.Host}}" class="main align-items-center justify-content-center flex-column stylish-overflow">
+<div id="main" data-handler="register" class="main align-items-center justify-content-center flex-column stylish-overflow">
   <div class="position-absolute" id="forms">
 
     {{- /* Set up the initial application password. Only shown if app is not already initialized. */ -}}
@@ -43,8 +43,13 @@
     </form>
 
     {{- /* DEX ADDRESS FORM */ -}}
-    <form class="d-hide{{if and .UserInfo.Initialized .UserInfo.Authed}} selected{{end}}" id="dexAddrForm">
+    <form class="d-hide{{if and .UserInfo.Initialized .UserInfo.Authed (not .Host)}} selected{{end}}" id="dexAddrForm">
       {{template "dexAddrForm" .}}
+    </form>
+
+    {{- /* DISCOVER ACCOUNT FORM */ -}}
+    <form class="d-hide{{if and .UserInfo.Initialized .UserInfo.Authed .Host}} selected{{end}}" id="discoverAcctForm" data-host="{{.Host}}">
+      {{template "discoverAcctForm" .}}
     </form>
 
     {{- /* REG ASSET SELECTOR */ -}}
