Address review comments

--- a/client/webserver/site/src/css/market.scss
+++ b/client/webserver/site/src/css/market.scss
@@ -97,6 +97,7 @@ div[data-handler=markets] {
       }
 
       #orderTotalPreview,
+      #mktSellTotalPreview,
       .h21 {
         height: 21px;
       }
