--- a/client/webserver/site/src/html/forms.tmpl
+++ b/client/webserver/site/src/html/forms.tmpl
@@ -197,9 +197,9 @@
 <div class="py-1 text-center fs28 sans-light offwhite lh1" data-tmpl="header">[[[Create Account]]]</div>
 <div class="fs16 text-center mb-4">on <span data-tmpl="dexHost"></span></div>
 <div data-tmpl="appPWBox" class="pb-2">
-  <label for="dexAddrAppPW" class="form-label ps-1 mb-1">[[[App Password]]]</label>
+  <label for="discoverAcctAppPW" class="form-label ps-1 mb-1">[[[App Password]]]</label>
   <div class="fs14 px-1 mb-1">Your app password is always required when performing sensitive operations.</div>
-  <input type="password" class="form-control select" id="dexAddrAppPW" data-tmpl="appPW">
+  <input type="password" class="form-control select" id="discoverAcctAppPW" data-tmpl="appPW">
 </div>
 <div class="d-flex justify-content-center mt-2">
   <button data-tmpl="submit" type="button" class="fs15 bg2 selected">[[[Create Account]]]</button>
