add login notes to improve UX

--- a/client/webserver/site/src/html/bodybuilder.tmpl
+++ b/client/webserver/site/src/html/bodybuilder.tmpl
@@ -46,6 +46,7 @@
   </div>
   <div id="loader" class="fill-abs flex-center d-hide">
     <div class="ico-spinner spinner"></div>
+    <div id="loaderMsg" class="mx-2"></div>
   </div>
 
   <div id="noteBox" class="d-hide">
