--- a/client/webserver/site/src/html/bodybuilder.tmpl
+++ b/client/webserver/site/src/html/bodybuilder.tmpl
@@ -103,7 +103,7 @@
 {{end}}
 
 {{define "bottom"}}
-<script src="/js/entry.js?v=XYXY183gH"></script>
+<script src="/js/entry.js?v=jBRE183gH"></script>
 </body>
 </html>
 {{end}}
