blur loader background on login form

--- a/client/webserver/site/src/css/forms.scss
+++ b/client/webserver/site/src/css/forms.scss
@@ -302,6 +302,10 @@ button.form-button {
 
 #loginForm {
   width: 250px;
+
+  #loader {
+    backdrop-filter: blur(4px);
+  }
 }
 
 #unlockWalletForm,
