--- a/client/webserver/site/src/html/wallets.tmpl
+++ b/client/webserver/site/src/html/wallets.tmpl
@@ -250,7 +250,7 @@
       <span class="mt-2 d-hide">~<span id="sendValue" class="mx-1"></span>USD</span>
       <div id="toggleSubtract" class="form-check pt-2">
           <input class="form-check-input" type="checkbox" id="subtractCheckBox">
-          <label for="subtractCheckBox" class="form-label ps-1">Subtract fees from amount sent.</label>
+          <label for="subtractCheckBox" class="form-check-label ps-1">Subtract fees from amount sent.</label>
       </div>
       <div id="maxSendDisplay" class="mt-3">
         <hr class="dashed mt-2">
