--- a/client/webserver/site/src/css/main_dark.scss
+++ b/client/webserver/site/src/css/main_dark.scss
@@ -35,19 +35,19 @@ body.dark {
   }
 
   .brdrleft {
-    border-left: 1px solid dark_border_color;
+    border-left: 1px solid $dark_border_color;
   }
 
   .brdrright {
-    border-right: 1px solid dark_border_color;
+    border-right: 1px solid $dark_border_color;
   }
 
   .brdrtop {
-    border-top: 1px solid dark_border_color;
+    border-top: 1px solid $dark_border_color;
   }
 
   .brdrbottom {
-    border-bottom: 1px solid dark_border_color;
+    border-bottom: 1px solid $dark_border_color;
   }
 
   .subtlelink,
@@ -131,5 +131,19 @@ body.dark {
 
   #loader {
     background-color: #13202b77;
+  }
+
+  .form-check-input[type=checkbox] {
+    background-color: black;
+
+    &:checked {
+      background-color: #27278d;
+    }
+  }
+
+  .form-check-label {
+    &:hover {
+      font-weight: bold;
+    }
   }
 }
